[project]
name = "harmonyos-mcp"
version = "0.1.0"
description = "An MCP server for harmonyos automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.4.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "phone-mcp>=0.2.1",
    "pillow>=11.1.0",
    "pyyaml>=6.0.2",
]
